# handlers/user/product.dto.go
@@ -17,8 +17,3 @@ type ProductDetail struct {
 	Price       float64 `json:"price"`
 	Stock       int     `json:"stock"`
 }
-
-type AddToCartRequest struct {
-	ProductID uint64 `json:"product_id" binding:"required"` // ID of the product
-	Quantity  int    `json:"quantity" binding:"required,gt=0"`
-}
