# handlers/user/product.go
@@ -8,7 +8,6 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
-	"github.com/golang-jwt/jwt/v5"
 )
 
 // GetProducts retrieves a paginated list of products with seller details
@@ -138,70 +137,4 @@ func GetProductDetail(c *gin.Context) {
 
 	// Send success response
 	helper.SendSuccess(c, http.StatusOK, "Product details retrieved successfully", product)
-}
-
-// AddToCartHandler handles adding goods to the cart
-// @Summary Add Product to Cart
-// @Description Add a product with a specific quantity to the buyer's cart
-// @Tags Products
-// @Security BearerAuth
-// @Accept json
-// @Produce json
-// @Param payload body AddToCartRequest true "Product ID and Quantity"
-// @Success 200 {object} helper.SuccessResponse "Product added to cart successfully"
-// @Failure 400 {object} helper.ErrorResponse "Invalid input data"
-// @Failure 404 {object} helper.ErrorResponse "Product not found"
-// @Failure 500 {object} helper.ErrorResponse "Internal Server Error"
-// @Router /cart/{id} [post]
-func AddToCart(c *gin.Context) {
-	// Retrieve claims from middleware (user ID)
-	claims := c.MustGet("claims").(jwt.MapClaims)
-
-	buyerID := uint64(claims["userid"].(float64)) // Extract Buyer ID
-
-	// Parse request body
-	var req AddToCartRequest
-	if err := c.ShouldBindJSON(&req); err != nil {
-		helper.SendError(c, http.StatusBadRequest, []string{"Invalid input data", err.Error()})
-		return
-	}
-
-	// Check if product exists
-	var product models.Product
-	if err := config.DB.First(&product, req.ProductID).Error; err != nil {
-		helper.SendError(c, http.StatusNotFound, []string{"Product not found"})
-		return
-	}
-
-	// Check if the buyer already has a cart
-	var cart models.Cart
-	if err := config.DB.Where("buyer_id = ?", buyerID).First(&cart).Error; err != nil {
-		// If no cart exists, create one
-		cart = models.Cart{BuyerID: buyerID}
-		config.DB.Create(&cart)
-	}
-
-	// Check if the product already exists in the cart
-	var cartItem models.CartItem
-	if err := config.DB.Where("cart_id = ? AND product_id = ?", cart.ID, req.ProductID).First(&cartItem).Error; err == nil {
-		// If product exists, update the quantity
-		cartItem.Quantity += req.Quantity
-		config.DB.Save(&cartItem)
-	} else {
-		// Add new cart item
-		cartItem = models.CartItem{
-			CartID:    cart.ID,
-			ProductID: req.ProductID,
-			Quantity:  req.Quantity,
-		}
-		config.DB.Create(&cartItem)
-	}
-
-	// Return success response
-	// Return success response
-	helper.SendSuccess(c, http.StatusOK, "Product added to cart successfully", gin.H{
-		"cart_id":  cart.ID,
-		"product":  product.Name,
-		"quantity": req.Quantity,
-	})
 }
